Enhanced distance function

--- a/SVM-training.ipynb
+++ b/SVM-training.ipynb
@@ -19,7 +19,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 81
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -39,7 +39,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 82
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -56,7 +56,7 @@
       "\n",
       "# Labels (data cols)\n",
       "labels = {\"y1\": 15, \"y2\":16, \"y3\":17}\n",
-      "label = \"y3\"\n",
+      "label = \"y1\"\n",
       "y = training_data[:,labels[label]]\n",
       "print(\"\\nTraining SVM for %s label\" %label)"
      ],
@@ -68,11 +68,11 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Training SVM for y3 label\n"
+        "Training SVM for y1 label\n"
        ]
       }
      ],
-     "prompt_number": 83
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
@@ -103,7 +103,7 @@
        ]
       }
      ],
-     "prompt_number": 84
+     "prompt_number": 44
     },
     {
      "cell_type": "code",
@@ -131,12 +131,12 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Supported vectors length: (3638, 16)\n",
-        "Dual coef. length: (1, 3638)\n"
+        "Supported vectors length: (124, 16)\n",
+        "Dual coef. length: (1, 124)\n"
        ]
       }
      ],
-     "prompt_number": 85
+     "prompt_number": 45
     },
     {
      "cell_type": "code",
@@ -153,17 +153,18 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Score k-fold validation: 0.949350\n"
+        "Score k-fold validation: 1.000000\n"
        ]
       }
      ],
-     "prompt_number": 86
+     "prompt_number": 46
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "# Save support vectors in a file\n",
+      "\"\"\"\n",
       "array_to_file(clf.support_vectors_, \"data/svm_models/%s_model_supported_vectors.tsv\" % label)\n",
       "array_to_file(clf.dual_coef_, \"data/svm_models/%s_model_dual_coef.tsv\" % label)\n",
       "\n",
@@ -171,12 +172,22 @@
       "array_to_file(y_test, \"data/svm_models/%s_model_y_test.tsv\" % label)\n",
       "\n",
       "array_to_file(X_train, \"data/svm_models/%s_model_X_train.tsv\" % label)\n",
-      "array_to_file(y_train, \"data/svm_models/%s_model_y_train.tsv\" % label)"
+      "array_to_file(y_train, \"data/svm_models/%s_model_y_train.tsv\" % label)\n",
+      "\"\"\""
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 87
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 47,
+       "text": [
+        "'\\narray_to_file(clf.support_vectors_, \"data/svm_models/%s_model_supported_vectors.tsv\" % label)\\narray_to_file(clf.dual_coef_, \"data/svm_models/%s_model_dual_coef.tsv\" % label)\\n\\narray_to_file(X_test, \"data/svm_models/%s_model_X_test.tsv\" % label)\\narray_to_file(y_test, \"data/svm_models/%s_model_y_test.tsv\" % label)\\n\\narray_to_file(X_train, \"data/svm_models/%s_model_X_train.tsv\" % label)\\narray_to_file(y_train, \"data/svm_models/%s_model_y_train.tsv\" % label)\\n'"
+       ]
+      }
+     ],
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -205,20 +216,13 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Vector 1 Labeled: 0.0 Model prediction: [ 0.]\n",
-        "Decision function: [[-5.43851781]]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "[0]\n"
+        "Vector 1 Labeled: 1.0 Model prediction: [ 1.]\n",
+        "Decision function: [[ 1.23194725]]\n",
+        "[1]\n"
        ]
       }
      ],
-     "prompt_number": 88
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
@@ -227,7 +231,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 88
+     "prompt_number": 48
     }
    ],
    "metadata": {}
